--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,26 +1,21 @@
 p{
-    font-family: sans-serif;
     font-size: 16px;
-    padding-left: 40px;
-    padding-bottom: 5px;
-}
-h1{
-    font-family: sans-serif;
+    padding-left: 50px;
 }
 #estilo1{
-    font-family: sans-serif;
     color: rgb(23, 136, 0);
     padding-left: 10px;
+    margin-bottom: 5px;
 }
 #estilo2{
-    font-family: sans-serif;
     color: rgb(0, 46, 172);
     padding-left:25px;
     margin-bottom: 0px;
+    margin-top:5px;
 }
 #time{
     font-size: 13px;
     padding-left: 25px;
-    padding-top: 0px;
+    margin-bottom: 5px;
     margin-top: 0px;
 }
